maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:6: error: not found: value pickUpBaggle
  pickUpBaggle();
  ^